# hermes-attractor

./: .gitignore  .pre-commit-config.yaml  .sp-harden-state.json  CLAUDE.md  README.md  __init__.py  justfile  plugin.yaml  pyproject.toml  x.dot
.beads/: config.yaml  issues.jsonl
.claude/: settings.json
.claude/agents/: conventional-committer.md  deepen-plan-loop.md  python-linter-fixer.md  python-pyright-type-error-fixer.md  ralph-prep.md  ralph-verify.md  ralph-worker.md  sp-00-constitution.md  sp-01-brainstorm.md  sp-02-specify.md  sp-03-plan.md  sp-04-red-team-pass.md  sp-05-tasks.md  sp-06-analyze.md  sp-07-implement.md  sp-architecture-review.md  sp-code-quality-review.md  sp-next.md  sp-security-review.md
.claude/commands/sp/: 02-specify.md  04-red-team.md  07-implement.md  08-harden.md  README.md
.claude/hooks/: on_stop.py  pre_compact.py  pre_tool_use_bash.py  session_start.py  status_line.py
.claude/skills/architecture-review/: SKILL.md
.claude/skills/beads-task-chains/: SKILL.md
.claude/skills/beads-task-chains/references/: description-templates.md
.claude/skills/beads-tasks/: SKILL.md
.claude/skills/beads-tasks/references/: batch-patterns.md  cli-reference.md
.claude/skills/code-review/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/commit/references/: troubleshooting.md
.claude/skills/compound/: SKILL.md
.claude/skills/ddd-domain-modeling/: SKILL.md
.claude/skills/ddd-domain-modeling/references/: domain-services.md  entities.md  repositories.md  value-objects.md
.claude/skills/error-handling-patterns/: SKILL.md
.claude/skills/glossary/: SKILL.md
.claude/skills/latent-features/: SKILL.md
.claude/skills/log-categorization/: SKILL.md
.claude/skills/non-technical-communication/: SKILL.md
.claude/skills/pii-redaction/: SKILL.md
.claude/skills/prefactoring/: SKILL.md
.claude/skills/quality-review/: SKILL.md
.claude/skills/ralph/: SKILL.md
.claude/skills/refactoring/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/sentry-integration/: SKILL.md
.claude/skills/spec-check/: SKILL.md
.claude/skills/structured-logging/: SKILL.md
.github/workflows/: main.yml
.hermes/plugins/: attractor
.specify/memory/: constitution.md
.specify/scripts/bash/: create-new-feature.sh
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
docs/: glossary.md
specs/: readme.md
specs/001-attractor-kanban/: data-model.md  plan.md  quickstart.md  research-hermes-kanban.md  research.md  spec.md
specs/001-attractor-kanban/checklists/: requirements.md
specs/001-attractor-kanban/contracts/: card-result.schema.json  ports.md  tools.md
specs/001-attractor-temporal/: spec.md
specs/001-attractor-temporal/checklists/: requirements.md
specs/acceptance-specs/: US01-author-validate-version.txt  US02-profile-resolution.txt  US03-crash-recovery.txt  US04-human-in-the-loop.txt  US05-parallel-fanout-fanin.txt  US06-goal-gate-loop.txt  US07-tool-node.txt  US08-self-hosting-sp.txt  US09-validation-rejection.txt
specs/brainstorms/: 2026-05-28-attractor-hermes-temporal-requirements.md
specs/pipelines/: sp-workflow.dot
src/hermes_attractor/: __init__.py
src/hermes_attractor/adapters/: __init__.py  dot_serializer.py  event_log.py  kanban_board.py  pipeline_store.py  profile_provisioner.py  profile_registry.py  renderer.py  run_state_store.py  runtime_tool_client.py  system_clock.py  task_event_reader.py  tool_node_registry.py
src/hermes_attractor/domain/: __init__.py  card.py  constants.py  echo.py  edge_selector.py  exceptions.py  guard.py  health.py  pipeline.py  run.py
src/hermes_attractor/plugin/: __init__.py  plugin.yaml  reconcile.py  schemas.py  tools.py
src/hermes_attractor/ports/: __init__.py  clock.py  dot.py  event_log.py  hermes.py  hermes_tool_client.py  kanban.py  pipeline_store.py  profile_provisioner.py  profile_registry.py  renderer.py  run_state.py  task_event_reader.py  tool_node.py
src/hermes_attractor/use_cases/: __init__.py  authoring.py  echo.py  health.py  provisioning.py  reconcile.py  run_execution.py
tests/: CLAUDE.md  __init__.py  conftest.py
tests/acceptance/: __init__.py  test_us01_author_validate_version.py  test_us02_profile_resolution.py  test_us03_crash_recovery.py  test_us04_human_in_the_loop.py  test_us05_parallel_fanout_fanin.py  test_us06_goal_gate_loop.py  test_us07_tool_node.py  test_us08_self_hosting_sp.py  test_us09_validation_rejection.py
tests/contract/: __init__.py  test_entry_point.py  test_plugin_register.py  test_root_shim.py
tests/integration/: __init__.py  conftest.py  test_authoring_flow.py  test_hermes_runtime_contract.py  test_reconcile_runtime.py  test_sp_pipeline.py
tests/unit/: __init__.py
tests/unit/adapters/: __init__.py  test_dot_serializer.py  test_event_log.py  test_kanban_board.py  test_pipeline_store.py  test_profile_provisioner.py  test_renderer.py  test_run_state_store.py  test_runtime_tool_client.py  test_system_clock.py  test_task_event_reader.py  test_tool_node_registry.py
tests/unit/domain/: test_card.py  test_echo.py  test_edge_selector.py  test_exceptions.py  test_guard.py  test_health.py  test_pipeline.py  test_run.py  test_sp_pipeline.py  test_validation_comprehensive.py
tests/unit/plugin/: __init__.py  test_reconcile_wiring.py  test_tools.py
tests/unit/ports/: __init__.py  test_hermes.py
tests/unit/use_cases/: __init__.py  test_authoring.py  test_echo.py  test_fan_out.py  test_goal_gate.py  test_health.py  test_human_in_the_loop.py  test_provisioning.py  test_reconcile.py  test_run_execution.py
(+42 files in other folders)
